--- a/index.html
+++ b/index.html
@@ -73,6 +73,45 @@
               </svg>
           </div>
       </div>
+      <div id="menu_opciones">
+          <div id="circulo_opc" class="herramientas_inactivas">
+              <svg id="svg_herramientas" width="32" height="32" viewBox="0 0 32 32">
+                  <path d="M3.205 12.801c-1.767 0-3.199 1.432-3.199 3.199s1.432 3.199 3.199 3.199c1.766 0 3.199-1.432 3.199-3.199s-1.433-3.199-3.199-3.199zM3.205 18.133c-1.177 0-2.132-0.956-2.132-2.133s0.956-2.133 2.132-2.133c1.176 0 2.133 0.956 2.133 2.133s-0.957 2.133-2.132 2.133z"></path>
+                  <path d="M28.795 12.801c-1.767 0-3.199 1.432-3.199 3.199s1.432 3.199 3.199 3.199c1.766 0 3.199-1.432 3.199-3.199s-1.433-3.199-3.199-3.199zM28.795 18.133c-1.176 0-2.133-0.956-2.133-2.133s0.957-2.133 2.133-2.133c1.176 0 2.133 0.956 2.133 2.133s-0.957 2.133-2.133 2.133z"></path>
+                  <path d="M16 12.801c-1.767 0-3.199 1.432-3.199 3.199s1.432 3.199 3.199 3.199c1.766 0 3.199-1.432 3.199-3.199s-1.433-3.199-3.199-3.199zM16 18.133c-1.176 0-2.133-0.956-2.133-2.133s0.957-2.133 2.133-2.133c1.176 0 2.133 0.956 2.133 2.133s-0.957 2.133-2.133 2.133z"></path>
+              </svg>
+          </div>
+          <div id="herramientas_opc">
+              <div id="herra_select">
+                  <svg id="svg_select" width="24" height="24"  viewBox="0 0 469.343 469.343">
+		              <path d="M380.885,280.457L103.552,3.124c-3.051-3.051-7.616-3.968-11.627-2.304c-3.989,1.643-6.592,5.547-6.592,9.856v384
+			             c0,4.053,2.283,7.723,5.909,9.536c3.605,1.813,7.936,1.451,11.157-1.003l75.093-56.32l58.283,116.565
+			             c1.877,3.733,5.632,5.888,9.557,5.888c1.621,0,3.243-0.363,4.757-1.131l85.333-42.667c5.269-2.645,7.424-9.045,4.779-14.315
+			             l-56.277-112.555h89.408c4.309,0,8.213-2.603,9.856-6.592C384.853,288.095,383.936,283.508,380.885,280.457z M266.667,277.343
+			             c-3.691,0-7.125,1.92-9.067,5.056c-1.941,3.136-2.133,7.061-0.469,10.368l59.221,118.464l-66.24,33.131l-59.221-118.464
+			             c-1.429-2.837-4.011-4.885-7.104-5.611c-0.811-0.192-1.621-0.277-2.453-0.277c-2.283,0-4.523,0.747-6.4,2.133l-68.267,51.2V36.425
+			             l240.917,240.917H266.667z"/>
+                  </svg>
+              </div>
+              <div id="herra_move">
+                  <svg id="svg_move" width="24" height="24" viewBox="0 0 512 512" >
+		              <path d="M416,85.333c-7.765,0-15.061,2.091-21.333,5.739v-5.739c0-23.531-19.136-42.667-42.667-42.667
+			             c-7.765,0-15.061,2.091-21.333,5.739v-5.739C330.667,19.136,311.531,0,288,0s-42.667,19.136-42.667,42.667v5.739
+			             c-6.272-3.648-13.568-5.739-21.333-5.739c-23.531,0-42.667,19.136-42.667,42.667v206.741l-58.645-29.333
+			             C113.856,258.325,103.957,256,94.08,256c-22.485,0-40.747,18.283-40.747,40.875c0,10.901,4.245,21.12,11.947,28.821
+			             l137.941,137.941C234.389,494.827,275.883,512,320,512c76.459,0,138.667-62.208,138.667-138.667V128
+			             C458.667,104.469,439.531,85.333,416,85.333z M437.333,373.333c0,64.704-52.651,117.333-117.355,117.333
+			             c-38.421,0-74.517-14.955-101.653-42.133L80.363,310.592c-3.669-3.648-5.696-8.533-5.696-13.845
+			             c0-10.709,8.704-19.413,19.413-19.413c6.592,0,13.163,1.557,19.072,4.501l74.091,37.035c3.285,1.643,7.253,1.472,10.368-0.469
+			             c3.136-1.941,5.056-5.376,5.056-9.067v-224C202.667,73.579,212.224,64,224,64s21.333,9.579,21.333,21.333V224
+			             c0,5.888,4.779,10.667,10.667,10.667c5.888,0,10.667-4.779,10.667-10.667V42.667c0-11.755,9.557-21.333,21.333-21.333
+			             s21.333,9.579,21.333,21.333V224c0,5.888,4.779,10.667,10.667,10.667s10.667-4.779,10.667-10.667V85.333
+			             C330.667,73.579,340.224,64,352,64s21.333,9.579,21.333,21.333V224c0,5.888,4.779,10.667,10.667,10.667
+			             c5.888,0,10.667-4.779,10.667-10.667v-96c0-11.755,9.557-21.333,21.333-21.333s21.333,9.579,21.333,21.333V373.333z"/>
+                  </svg>
+              </div>
+          </div>
+      </div>
       <div id="area_principal">
           <!--canvas id="myCanvas" width="2000" height="2000"></canvas-->
       </div>
@@ -89,6 +128,11 @@
               <input id="valY1input" class="addVInput" type="number" placeholder="y1"/>)
               (<input id="valX2input" class="addVInput" type="number" placeholder="x2"/>,
               <input id="valY2input" class="addVInput" type="number" placeholder="y2"/>)
+          </div>
+          <div id="controles_bi">
+              <svg id="svg_centrar" width="32" height="32" viewBox="0 0 32 32">
+                  <path d="M28.795 4.804h-25.59v15.994h8.682l-5.483 6.398h19.192l-5.484-6.398h8.683v-15.994zM8.722 26.129l7.277-8.491 7.278 8.491h-14.556zM27.729 19.732h-8.531l-3.199-3.732-3.199 3.732h-8.529v-13.861h23.457v13.861z"></path>
+              </svg>
           </div>
           <div id="coords">
               <p>x: 0</p>
